refactor: replace exporter state with an enum.